# ros-sugar

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  README.md  genindex.html  index.html  objects.inv  overview.html  package.xml  philosophy.html  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js  use.html
.doctrees/: environment.pickle  index.doctree  overview.doctree  philosophy.doctree  use.doctree
.doctrees/advanced/: index.doctree  types.doctree
.doctrees/apidocs/: index.doctree
.doctrees/apidocs/ros_sugar/: ros_sugar.actions.doctree  ros_sugar.base_clients.doctree  ros_sugar.config.base_attrs.doctree  ros_sugar.config.base_config.doctree  ros_sugar.config.base_validators.doctree  ros_sugar.config.doctree  ros_sugar.core.action.doctree  ros_sugar.core.component.doctree  ros_sugar.core.component_actions.doctree  ros_sugar.core.doctree  ros_sugar.core.event.doctree  ros_sugar.core.fallbacks.doctree  ros_sugar.core.monitor.doctree  ros_sugar.core.node.doctree  ros_sugar.core.status.doctree  ros_sugar.doctree  ros_sugar.events.doctree  ros_sugar.io.callbacks.doctree  ros_sugar.io.doctree  ros_sugar.io.publisher.doctree  ros_sugar.io.supported_types.doctree  ros_sugar.io.topic.doctree  ros_sugar.launch._lifecycle_transition.doctree  ros_sugar.launch.doctree  ros_sugar.launch.executable.doctree  ros_sugar.launch.launch_actions.doctree  ros_sugar.launch.launcher.doctree  ros_sugar.supported_types.doctree  ros_sugar.tf.doctree
.doctrees/design/: actions.doctree  component.doctree  events.doctree  fallbacks.doctree  index.doctree  launcher.doctree  monitor.doctree  status.doctree  topics.doctree
.github/workflows/: debian_packaging.yml  release_mirror.yml
_sources/: overview.md
_sources/advanced/: index.md  types.md
_sources/apidocs/: index.rst
_sources/apidocs/ros_sugar/: ros_sugar.actions.md  ros_sugar.base_clients.md  ros_sugar.config.base_attrs.md  ros_sugar.config.base_config.md  ros_sugar.config.base_validators.md  ros_sugar.config.md  ros_sugar.core.action.md  ros_sugar.core.component.md  ros_sugar.core.component_actions.md  ros_sugar.core.event.md  ros_sugar.core.md  ros_sugar.core.monitor.md  ros_sugar.core.node.md  ros_sugar.core.status.md  ros_sugar.events.md  ros_sugar.io.callbacks.md  ros_sugar.io.md  ros_sugar.io.publisher.md  ros_sugar.io.supported_types.md  ros_sugar.io.topic.md  ros_sugar.launch._lifecycle_transition.md  ros_sugar.launch.launch_actions.md  ros_sugar.launch.launcher.md  ros_sugar.launch.md  ros_sugar.md  ros_sugar.supported_types.md  ros_sugar.tf.md
_sources/design/: actions.md  component.md  fallbacks.md  index.md  launcher.md  monitor.md  topics.md
advanced/: index.html  types.html
apidocs/: index.html
apidocs/ros_sugar/: ros_sugar.actions.html  ros_sugar.base_clients.html  ros_sugar.config.base_attrs.html  ros_sugar.config.base_config.html  ros_sugar.config.base_validators.html  ros_sugar.config.html  ros_sugar.core.action.html  ros_sugar.core.component.html  ros_sugar.core.component_actions.html  ros_sugar.core.event.html  ros_sugar.core.fallbacks.html  ros_sugar.core.html  ros_sugar.core.monitor.html  ros_sugar.core.node.html  ros_sugar.core.status.html  ros_sugar.events.html  ros_sugar.html  ros_sugar.io.callbacks.html  ros_sugar.io.html  ros_sugar.io.publisher.html  ros_sugar.io.supported_types.html  ros_sugar.io.topic.html  ros_sugar.launch._lifecycle_transition.html  ros_sugar.launch.executable.html  ros_sugar.launch.html  ros_sugar.launch.launch_actions.html  ros_sugar.launch.launcher.html  ros_sugar.supported_types.html  ros_sugar.tf.html
build_scripts/: build_and_test.sh  create_deb.sh
design/: actions.html  component.html  events.html  fallbacks.html  index.html  launcher.html  monitor.html  status.html  topics.html
docs/: conf.py  index.md  overview.md  use.md
docs/advanced/: types.md
docs/apidocs/ros_sugar/: ros_sugar.base_clients.md  ros_sugar.config.base_config.md  ros_sugar.core.action.md  ros_sugar.core.component.md  ros_sugar.core.event.md  ros_sugar.core.fallbacks.md  ros_sugar.core.md  ros_sugar.core.monitor.md  ros_sugar.core.node.md  ros_sugar.core.status.md  ros_sugar.events.md  ros_sugar.io.md  ros_sugar.io.publisher.md  ros_sugar.io.topic.md  ros_sugar.launch.executable.md  ros_sugar.launch.launch_actions.md  ros_sugar.launch.launcher.md  ros_sugar.tf.md
docs/design/: component.md  events.md  fallbacks.md  launcher.md
msg/: ComponentStatus.msg
ros_sugar/: __init__.py  actions.py  base_clients.py  events.py  supported_types.py  tf.py  utils.py
ros_sugar/config/: __init__.py  base_attrs.py  base_config.py  base_validators.py
ros_sugar/core/: __init__.py  action.py  component.py  component_actions.py  event.py  fallbacks.py  monitor.py  node.py  status.py
ros_sugar/io/: __init__.py  callbacks.py  publisher.py  supported_types.py  topic.py  utils.py
ros_sugar/launch/: __init__.py  _lifecycle_transition.py  executable.py  launch_actions.py  launcher.py
scripts/: create_service
srv/: ChangeParameter.srv  ChangeParameters.srv  ConfigureFromYaml.srv  ExecuteMethod.srv  ReplaceTopic.srv
test/: actions_test.py  events_test.py
test/component/: server_run_test.py  timed_run_test.py
